--- a/modal.css
+++ b/modal.css
@@ -1,1 +1,42 @@
 
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+.content{
+    margin: 0 auto;
+    padding: 40px;
+}
+.modal{
+    display: none;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+.modal__bg{
+    background: rgba(0,0,0,0.8);
+    height: 100vh;
+    position: absolute;
+    width: 100%;
+}
+.modal__content{
+font-size: 80%;
+text-align: center;
+    background: #fff;
+    left: 50%;
+    padding: 20px;
+    position: absolute;
+    top: 20%;
+    transform: translate(-50%,-50%);
+    width: 60%;
+}
+.modal_btn{
+    font-size: 110%;
+}
+input.btn_ok {
+    padding: 0 10;
+    margin-right: 5%;
+}
